# ima-cli

./: .gitignore  Cargo.toml  README.md  SKILL.md
.github/workflows/: build.yml
skills/: SKILL.md
skills/knowledge-base/: SKILL.md
skills/notes/: SKILL.md
src/: api.rs  config.rs  cos.rs  error.rs  main.rs
src/commands/: kb.rs  mod.rs  notes.rs
