[package]
name = "ima-cli"
version = "1.1.7"
edition = "2021"
authors = ["IMA Skill Contributors"]
description = "IMA OpenAPI CLI tool for knowledge base and notes management"
license = "MIT"
repository = "https://github.com/ima-skill/ima-cli"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tokio = { version = "1.35", features = ["full"] }
dirs = "5.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.21"
tempfile = "3.9"
mime_guess = "2.0"
toml = "0.8"

[features]
default = []
toml = []

[profile.release]
opt-level = 3
lto = true
strip = true

# Windows-specific optimizations
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
